| Summary: | ASTERISK-26099: res_pjsip_pubsub: Crash when sending request due to server timeout | ||||
| Reporter: | Ross Beer (rossbeer) | Labels: | |||
| Date Opened: | 2016-06-09 04:53:51 | Date Closed: | 2016-06-30 14:39:19 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub | ||
| Versions: | SVN | Frequency of Occurrence | Frequent | ||
| Related Issues: |
| ||||
| Environment: | Fedora Server 23 / PJSIP SVN 5340 | Attachments: | ( 0) backtrace_2016-06-09T07-28-38_CLEAN.txt ( 1) backtrace_2016-06-20T15_35_36_CLEAN.txt | ||
| Description: | Asterisk frequently crashes when handling presence | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-06-09 04:53:52.462-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Ross Beer (rossbeer) 2016-06-20 09:46:22.317-0500 Crash caused due to pubsub subscription. Looks like the thread could not access memory. By: Ross Beer (rossbeer) 2016-06-24 08:11:44.184-0500 This does not appear to have resolved the issue. The configure script doesn't appear to detect the change in PJSIP: PBX_PJPROJECT='1' PBX_PJSIP_DLG_CREATE_UAS_AND_INC_LOCK='1' PBX_PJSIP_EVSUB_GRP_LOCK='0' PBX_PJSIP_EXTERNAL_RESOLVER='1' PBX_PJSIP_GET_DEST_INFO='1' PBX_PJSIP_REPLACE_MEDIA_STREAM='1' PBX_PJSIP_TLS_TRANSPORT_PROTO='1' PBX_PJ_SSL_CERT_LOAD_FROM_FILES2='0' PBX_PJ_TRANSACTION_GRP_LOCK='1' By: Asterisk Team (asteriskteam) 2016-06-24 08:11:44.460-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Ross Beer (rossbeer) 2016-06-24 10:31:26.296-0500 I can confirm when running the configure script, the variable 'HAVE_PJSIP_EVSUB_GRP_LOCK' is not being set in the 'include/asterisk/autoconfig.h' file. Therefore the fix is not being applied, however the required methods were added to PJSIP commit 5351 (https://trac.pjsip.org/repos/changeset/5351). Is there a way to test the auto configre script with this PJSIP commit? By: Ross Beer (rossbeer) 2016-06-29 10:52:49.659-0500 Manually setting 'HAVE_PJSIP_EVSUB_GRP_LOCK 1' does stop the crash related to this issue. The ./configure script needs to be patched to automatically detect this from PJSIP | ||||